# snake

./: .gitignore  CMakeLists.txt  REFACTORING_README.md  build.sh  build_cross.sh  hello1.cpp  run_cross.sh  snake0.cpp  snake1.cpp  snake1_sdl.cpp  snake2.cpp  sync_dep.sh  x86_64-linux-gnu.toolchain.cmake
.hello/: CMakeLists.txt  hello1.cpp
algorithm/: pathfinding.cpp  pathfinding.h
fonts/: font0.cpp
include/: circular_buffer.h  snake_app.h  snake_dep.h  snake_types.h
ipc/: CIRCULAR_BUFFER_README.md  CMakeLists.txt  buffer_dump.cpp  circular_buffer.cpp
snake0/: CMakeLists.txt  snake0.cpp
snake1/: CMakeLists.txt  snake1.cpp
snake2/: CMakeLists.txt  snake2.cpp  snake2_refactored.cpp  snake_app.cpp  snake_draw.cpp  snake_draw.h  snake_theme.h  snake_ui.cpp  snake_ui.h  tile_grid.cpp
snake2/shaders/: fragment.fs  vertex.vs
tests/: CMakeLists.txt  buffer_test.cpp
